fixed rendering issue (gap between stack & heap adjusted disproportionately when stack width grew) | Some sundry formating

--- a/src/client/css/stack.styl
+++ b/src/client/css/stack.styl
@@ -117,7 +117,7 @@ _.frame ._active
 
 ._frame table._locals ._value
 	overflow: hidden
-	text-align: left
+	text-align: right
 
 	padding-left: 10px
 	padding-right: 5px
